--- a/calculator/script/package.json
+++ b/calculator/script/package.json
@@ -13,6 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.6.4"
+    "coverage": "^0.4.1",
+    "jest": "^29.6.4",
+    "jsdom": "^22.1.0"
+  },
+  "devDependencies": {
+    "nyc": "^15.1.0"
   }
 }
