--- a/calculator/script/package.json
+++ b/calculator/script/package.json
@@ -13,11 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "coverage": "^0.4.1",
-    "jest": "^29.6.4",
-    "jsdom": "^22.1.0"
+    "coverage": "^0.4.1"
   },
   "devDependencies": {
+    "jest": "^29.6.4",
+    "jsdom": "^22.1.0",
+    "jsdom-global": "^3.0.2",
     "nyc": "^15.1.0"
   }
 }
